<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_episode_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.namlu.podlistenerapp.EpisodeListActivity">

    <!-- Single Podcast item -->
    <LinearLayout
        android:id="@+id/ll_code_switch_activity_episode_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_code_switch_activity_episode_list"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:src="@drawable/code_switch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_code_switch_activity_episode_list"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_toRightOf="@+id/iv_code_switch_activity_episode_list"
                android:text="@string/title_code_switch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_toRightOf="@id/iv_code_switch_activity_episode_list"
                android:layout_below="@+id/tv_title_code_switch_activity_episode_list"
                android:text="@string/publisher_npr"/>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/Divider"></View>

    <!-- Single episode item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/date_14_jan"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="@string/text_description_code_switch"/>

        <ImageButton
            android:id="@+id/btn_play_activity_episode_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_btn_play"/>

    </LinearLayout>

    <!-- Single episode item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/date_21_jan"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="#2 Even better than the premier!"/>

        <ImageButton
            android:id="@+id/btn_download_activity_episode_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_btn_download"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_episode_list"/>

</LinearLayout>
