<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_subscribed_podcasts"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.namlu.podlistenerapp.SubscribedPodcastsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Library"/>

    <View style="@style/Divider"/>

    <!-- Single Podcast item -->
    <LinearLayout
        android:id="@+id/ll_code_switch_activity_subscribed_podcasts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_code_switch_activity_subscribed_podcasts"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:src="@drawable/code_switch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_code_switch_activity_subscribed_podcasts"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_toRightOf="@+id/iv_code_switch_activity_subscribed_podcasts"
                android:text="@string/title_code_switch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_toRightOf="@id/iv_code_switch_activity_subscribed_podcasts"
                android:layout_below="@+id/tv_title_code_switch_activity_subscribed_podcasts"
                android:text="@string/publisher_npr"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Single podcast item -->
    <LinearLayout
        android:id="@+id/ll_fragmented_activity_subscribed_podcasts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_fragmented_activity_subscribed_podcasts"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:src="@drawable/fragmented"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_fragmented_activity_subscribed_podcasts"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_toRightOf="@+id/iv_fragmented_activity_subscribed_podcasts"
                android:text="@string/title_fragmented_an_android_podcast"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_toRightOf="@id/iv_fragmented_activity_subscribed_podcasts"
                android:layout_below="@+id/tv_title_fragmented_activity_subscribed_podcasts"
                android:text="@string/publisher_self_published"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Single Podcast item -->
    <LinearLayout
        android:id="@+id/ll_podcast_startup_activity_subscribed_podcasts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_startup_activity_subscribed_podcasts"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:src="@drawable/startup_podcast"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_startup_activity_subscribed_podcasts"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_toRightOf="@+id/iv_startup_activity_subscribed_podcasts"
                android:text="@string/title_start_up_podcast"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_toRightOf="@id/iv_startup_activity_subscribed_podcasts"
                android:layout_below="@+id/tv_title_startup_activity_find_podcasts"
                android:text="@string/publisher_gimlet_media"/>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_subscribed_podcasts"/>



</LinearLayout>
