<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_find_podcast"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.namlu.podlistenerapp.FindPodcastActivity">

    <!-- Search Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_search_activity_find_podcast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Search by name"/>

        <Button
            android:id="@+id/btn_search_activity_find_podcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/et_search_activity_find_podcast"
            android:text="Search"/>
    </RelativeLayout>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Results:"/>

    <!-- Single Podcast item -->
    <LinearLayout
        android:id="@+id/ll_podcast_tal_activity_find_podcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_tal_activity_find_podcast"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:src="@drawable/this_american_life"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_tal_activity_find_podcast"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_toRightOf="@+id/iv_tal_activity_find_podcast"
                android:text="@string/title_this_american_life"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_toRightOf="@id/iv_tal_activity_find_podcast"
                android:layout_below="@+id/tv_title_tal_activity_find_podcast"
                android:text="@string/publisher_wbez"/>
        </LinearLayout>

    </LinearLayout>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_find_podcast"/>

</LinearLayout>
